# neural-tools-mcp

./: .canon.yaml  .dockerignore  .env  .env.example  .env.mcp.local  .env.production.template  .gitignore  .graphragignore  .mcp.json  .mcp.json.disabled  .pre-commit-config.yaml  ARCHITECTURE.md  CANON_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.nomic-fix  Dockerfile.nomic-optimized  Dockerfile.syntax-fix  Dockerfile.test  ECOSYSTEM_FILE_INDEX.md  GRAPHRAG_DOCKER_GUIDE.md  GRAPHRAG_README.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MCP_DEV_SETUP.md  Makefile  Modelfile.graphiti-coder-optimized  NEURAL_INDEXER_DEPLOYMENT.md  NEURAL_SEARCH_ROADMAP.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_PLAN.md  README.md  SHARING.md  apply_chunk_constraints.py  check_divergence_now.py  claude.md  claude_backup.md  debug_elite_search.py  (+82 more)
.archive/: Dockerfile.l9-minimal  README.md  mcp-tools  prism_cache.json  requirements-l9-minimal.txt
.claude/: L9-PROJECT-ISOLATION.md  PROJECT-ISOLATION.md  hook_compliance_report.json  l9-project-config.json  prism_cache.json  project-config.json  safety_profile.json  semantic-memory.db  session_summaries.jsonl  settings.json  test_graceful_degradation.py  validate_hooks.py
.graphrag/: schema.yaml
adrs/: ADR-0103-graphrag-enhancement-plan.md
ci/: validate_environment.py
deprecated/: L9-ENHANCED-MCP-SETUP.md  TEMPLATE-REORGANIZATION-PLAN.md  TEMPLATE-STRUCTURE.md  install.sh
docker/: Dockerfile  Dockerfile.indexer  Dockerfile.indexer.multi  Dockerfile.metrics-exporter  Dockerfile.test  README.md  metrics_exporter.py
docs/: ADR-0037-CODE-REVIEW-CHECKLIST.md  ADR-0037-TEAM-GUIDE.md  ADR-0097-unified-project-context-detection.md  ADR-0098-graphrag-enhancement-plan.md  ADR-97-INTEGRATION-SUMMARY.md  HOOK-COMPLIANCE-AUDIT.md  L9-COMPLETE-ARCHITECTURE-2025.md  L9-HOOK-DEVELOPMENT-GUIDELINES.md  L9-MCP-DOCKER-SETUP.md  L9-PRODUCTION-CERTIFICATION-FINAL-2025.md  MCP-2025-IMPLEMENTATION-GUIDE.md  ORCHESTRATOR_IMPLEMENTATION.md  QUICK-START.md  deployment-safeguards.md  deprecation-playbook.md  docker-integration-guide.md  l9-preflight-checklist.md  quick-start-guide.md
legacy/: README.md  SETUP.md  install.py  test_mcp_server.py
memory/: session-sticky.md
monitoring/: README.md  alertmanager.yml  prometheus-alerts.yml  prometheus.yml
neural-sdk/: README.md  test-integration.js
neural-sdk-simple/: neural.js
neural-tools/: .canon.yaml  .dockerignore  .env.example  DEPLOYMENT.md  DOCKER_MAINTENANCE.md  Dockerfile.l9-minimal  Dockerfile.neural-embeddings  L9_ROBUSTNESS.md  README.md  build-and-run.sh  cleanup_stale_mcp.py  docker-cleanup.sh  docker-compose.neural-tools.yml  entrypoint_multi.py  fix_infrastructure.py  fix_qdrant_indexing.py  l9_start.sh  manual_reindex.py  mcp_health_check.py  neo4j_client.py  neo4j_migration_utils.py  neural-mcp-server-enhanced.py  nomic_embed_server.py  pytest.ini  rebuild-indexer-with-ast.sh  requirements-l9-enhanced.txt  requirements-l9-minimal.txt  run_mcp_server.py  run_mcp_server_wrapper.py  test_indexer.py  (+20 more)
(+931 files in other folders)
